# readpass

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  unix.rs  windows.rs
tests/: no-terminal.rs
