[package]
name = "readpass"
version = "1.0.3"
authors = ["Conrad Kleinespel <conradk@conradk.com>", "acuteenvy"]
description = "A tiny library for reading passwords without displaying them on the terminal"
license = "Apache-2.0"
repository = "https://github.com/acuteenvy/readpass"
documentation = "https://docs.rs/readpass"
categories = ["command-line-interface"]
keywords = [
    "read",
    "password",
    "security",
    "pass",
    "getpass",
]
edition = "2021"
rust-version = "1.63"

[dependencies]
zeroize = "1.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.60"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_SystemServices"
]

[lints.clippy]
all = "warn"
pedantic = "warn"
style = "warn"
